add endpoint to return url of focussing image
